components/kustomizations/network-policies/0.0.1/base/nginx-ingress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress-to-stack-ai
  namespace: flux-system
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: nginx-ingress
    ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 8000

    - protocol: TCP
      port: 8888
